--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,9 @@ copyright: Copyright &copy; 2020 - 2025 Club Robótica Granada
 nav:
   - Introducción: index.md 
   - Algunos conceptos sobre el CO2: sobre-co2/co2.md
-  - Versión modular: modular/modular.md
+  - Versión modular: 
+    - Introducción: modular/modular.md
+    - Montaje y conexionado: modular/montaje.md
   - Versión Easy Plug: ep/ep.md
   - Versión Node MCU: mcu/mcu.md
   - Miscelanea:
