--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,10 +23,11 @@ copyright: Copyright &copy; 2020 - 2025 Club Robótica Granada
 # 5. Navegación
 nav:
   - Introducción: index.md 
-  - Algunos conceptos sobre el CO2: sobre-co2/co2.md
+  - Algunos conceptos sobre CO2 y VOC : sobre-co2/co2.md
   - Versión modular: 
     - Introducción: modular/modular.md
     - Montaje y conexionado: modular/montaje.md
+    - Pruebas individuales sensores: modular/pruebas.md
   - Versión Easy Plug: ep/ep.md
   - Versión Node MCU: mcu/mcu.md
   - Miscelanea:
