--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ nav:
     - Montaje y conexionado: modular/montaje.md
     - Pruebas individuales sensores: modular/pruebas.md
     - Programa completo: modular/firmware-modular.md
-  - Versión Easy Plug: ep/ep.md
+  - Versión IoT con MEGA: mega/mega.md
   - Versión Node MCU: mcu/mcu.md
   - 3D: 3D/3d.md
   - Miscelanea:
